úprava viditelnosti spotify, prehrávacích prvkov v prehrávači, nalinkovanie mojevideo linku v links, pridanie mojevideo ikony,

--- a/player.css
+++ b/player.css
@@ -301,3 +301,16 @@ div > img {
 
 
   }
+
+
+  .music-bar{
+    display: none;
+  }
+
+  .music-order{
+    display: none;
+  }
+
+  .music-control{
+    display: none;
+  }
